# viz

./: .gitignore  CLAUDE.md  Makefile  README.md  claude.md  pyproject.toml
src/viz/: __init__.py  main.py
src/viz/audio/: __init__.py  analyzer.py  capture.py
src/viz/graphics/: __init__.py  isometric.py  renderer.py
src/viz/utils/: __init__.py  config.py  icon.py
