[project]
name = "viz"
version = "0.1.0"
description = "3D Audio Visualizer for macOS BlackHole audio output"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "pyaudio>=0.2.13",
    "scipy>=1.11.0",
]

[project.scripts]
viz = "viz.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
